--- a/frontend/scss/home.scss
+++ b/frontend/scss/home.scss
@@ -4,7 +4,7 @@ div#home {
     height: 100vh;
 
     .inputGroup {
-        flex-direction: column;
+        // flex-direction: column;
 
         input {
             font-family: 'Courier New', Courier, monospace;
